--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gluestack-style/react": "^0.2.48",
+    "@gluestack-ui/themed": "^0.1.45",
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "~18.2.14",
     "expo": "~49.0.11",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.13.0",
+    "react-native-reanimated": "^3.5.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "^3.25.0",
+    "react-native-svg": "13.4.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
